# finite-homologies

./: CMakeLists.txt  chaincomplex.cpp  chaincomplex.h  edge.h  main.cpp  matrix.cpp  matrix.h  poset.cpp  poset.h  scomplex.cpp  scomplex.h  vertex.h
tests/: test_allsubsets.cpp  test_allsubsets.h  test_chaincomplex.cpp  test_chaincomplex.h  test_maxchains.cpp  test_maxchains.h  test_poset.cpp  test_poset.h
